# riscv-ctg-srtg

./: .gitignore  CMakeLists.txt  Makefile  README.md  xori.S
.cache/clangd/index/: argparser.h.E268117F71E1DF12.idx  generic.cpp.142D2259C91B4856.idx  main.cpp.F09BB887189FB2B6.idx  test_rr_op.cpp.5EBD7F9C5B25B8D0.idx  tests.hpp.F7135186314E66F6.idx
include/: argparser.h  tests.hpp
src/: generic.cpp  main.cpp  test_branch_op.cpp  test_case.cpp  test_imm_op.cpp  test_rr_op.cpp
